tests/fixtures/untyped_polymorphic_module_inclusion.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/untyped_polymorphic_module_inclusion.rb:7
      7 |  def main => nil
                       ^^^ NilClass, with:
        @ (builtin stdlib):__LINE__
    107 |    def map[ProjectedType]({ |EnumType x| => ProjectedType } &) => [ProjectedType]; end
                                                                            ^^^^^^^^^^^^^^^ Array::[:any]

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/untyped_polymorphic_module_inclusion.rb:7
      7 |  def main => nil
                       ^^^ NilClass, with:
        @ __ROOT__/tests/fixtures/untyped_polymorphic_module_inclusion.rb:8
      8 |    Foo.new.map { |x| x }
             ^^^^^^^^^^^^^^^^^^^^^ Array::[:any]
